--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
+REACT_APP_WEBSCRAP_URL = https://webscrap.now.sh/webscrap
 REACT_APP_API_URL = http://localhost:3000
 REACT_APP_SLACK_URL = https://hooks.slack.com/services/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
