--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
 REACT_APP_API_URL = https://howaboutthis-api.now.sh
+REACT_APP_SLACK_URL = https://hooks.slack.com/services/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
