--- a/public/manifest.json
+++ b/public/manifest.json
@@ -39,5 +39,11 @@
    "density": "4.0"
   }
  ],
+ "features": [
+  "Cross Platform",
+  "low-latency inking",
+  "fast",
+  "useful AI"
+ ],
  "display": "standalone"
 }
